@@ -1,12 +1,19 @@
 {
-  "timestamp" : "2022-10-21T16:16:37Z",
+  "timestamp" : "2022-10-24T08:20:09Z",
   "count_outdated" : 68,
   "uniques_outdated" : 30,
-  "count" : 69,
-  "uniques" : 31,
+  "count" : 70,
+  "uniques" : 32,
   "views" : [
     {
       "timestamp": "2022-10-17T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-10-24T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
