@@ -1,3 +1,11 @@
+2022-10-24T08:20:09Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3311108452 # 549
+* notice: last 14d: unq all: 2 2
+* notice: prev accum: outdated-unq outdated-all / unq all: 30 68 / 31 69
+* notice: next accum: outdated-unq outdated-all / unq all: 30 68 / 32 70
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-10-24]
+
 2022-10-21T16:16:37Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3298901201 # 541
 * notice: last 14d: unq all: 1 1
